# virtusoul-router

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
tests/: test_classifier.py  test_config.py
virtusoul_router/: __init__.py  classifier.py  cli.py  config.py  providers.py  server.py  training_data.py
